<resources>
    <string name="app_name">Grasshopper</string>
    <string name="password_string">Password</string>
    <string name="repeat_password_string">Repeat password</string>
    <string name="email_string">Email</string>
    <string name="entrar_button">Entrar</string>
    <string name="app_slogan">Interface Design by Mario Castro</string>
    <string name="username_string">Username</string>
    <string name="registro_string">Registrarse</string>
    <string name="title_activity_main_bn">MainBN</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>